idea/testData/multiplatform/duplicateExpectsExplicit/bottom/bottom.kt
actual class <!AMBIGUOUS_EXPECTS("Actual class 'A'", "left, right")!>A<!>